getPublicityList
