# api/routes.js
@@ -69,4 +69,5 @@ module.exports = (router) => {
     router.put('/section/update', isAdmin, apiOUService.updateSection);
     router.post('/section/insert', isAdmin, apiOUService.insertSection);
     router.delete('/section/:id/delete', isAdmin, apiOUService.deleteSection);
+    router.get('/hierarchy/publicityList', apiOUService.getPublicityList);
 };
