# swagger.json
@@ -1479,6 +1479,27 @@
           }
         }
       }
+    },
+    "/api/hierarchy/publicityList": {
+      "get": {
+        "summary": "GET api/hierarchy/publicityList",
+        "operationId": "getHierarchyPublicityList",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/HierarchyPublicity"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -2235,6 +2256,21 @@
             "type": "string",
             "format": "fi|sv|en",
             "description": "Language of the full name."
+          }
+        }
+      },
+      "HierarchyPublicity": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "hierarchy": {
+            "type": "string"
+          },
+          "publicity": {
+            "type": "boolean"
           }
         }
       }
